<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <TextView
    android:id="@+id/tvNombreVerdura"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/nombre_verdura"
    android:textSize="20sp"
    android:textStyle="bold"
    android:layout_marginStart="10dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/descripcion"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_goneMarginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@+id/tvNombreVerdura"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreVerdura" />

    <TextView
        android:id="@+id/tvNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero"
     android:layout_marginEnd="20dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>